[gd_scene load_steps=4 format=3 uid="uid://kb1ndu7dwhhl"]

[ext_resource type="Script" path="res://World/Chunk/Chunk.gd" id="1_70n3x"]
[ext_resource type="TileSet" uid="uid://bk67hvy2kerpf" path="res://World/Chunk/ChunkTileSet.tres" id="1_l00he"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cpxuo"]
size = Vector2(2048, 2048)

[node name="Chunk" type="TileMap" groups=["Chunk"]]
tile_set = ExtResource("1_l00he")
format = 2
layer_0/name = "Terrain"
layer_1/name = "Hazards"
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Pickups"
layer_2/tile_data = PackedInt32Array()
layer_3/name = "Interactables"
layer_3/tile_data = PackedInt32Array()
script = ExtResource("1_70n3x")

[node name="ChunkArea" type="Area2D" parent="."]
collision_layer = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChunkArea"]
shape = SubResource("RectangleShape2D_cpxuo")
debug_color = Color(0.219608, 0.392157, 1, 0)

[connection signal="area_entered" from="ChunkArea" to="." method="_on_chunk_area_area_entered"]
[connection signal="area_exited" from="ChunkArea" to="." method="_on_chunk_area_area_exited"]
